--- a/index.html
+++ b/index.html
@@ -1149,6 +1149,52 @@ cursor: pointer;
   color: #666;
 }
 
+/* ===============================
+   ✅ 액션시트 (하단에서 올라오는)
+================================ */
+.sheet.hidden { display:none; }
+.sheet{
+  position: fixed;
+  inset: 0;
+  z-index: 180000;
+}
+.sheet-backdrop{
+  position:absolute;
+  inset:0;
+  background: rgba(0,0,0,0.45);
+}
+.sheet-panel{
+  position:absolute;
+  left:50%;
+  transform: translateX(-50%);
+  bottom: calc(env(safe-area-inset-bottom) + 10px);
+  width: 92%;
+  max-width: 380px;
+
+  background:#1a1a1a;
+  border: 1px solid rgba(255,255,255,0.08);
+  border-radius: 16px;
+  overflow:hidden;
+}
+.sheet-btn{
+  width:100%;
+  padding: 14px 0;
+  background: transparent;
+  border: none;
+  color:#eaeaea;
+  font-size: 15px;
+  font-weight: 700;
+  cursor:pointer;
+}
+.sheet-btn + .sheet-btn{
+  border-top: 1px solid rgba(255,255,255,0.08);
+}
+.sheet-btn:active{
+  background: rgba(255,255,255,0.06);
+}
+.sheet-btn.danger{
+  color:#ff6b6b;
+}
 
 
    
@@ -1593,7 +1639,40 @@ input[type="number"] {
   </div>
 </div>
 
+<!-- ✅ 기록 액션시트 -->
+<div id="recordActionSheet" class="sheet hidden">
+  <div class="sheet-backdrop" id="rasBackdrop"></div>
+  <div class="sheet-panel">
+    <button id="rasEdit" class="sheet-btn">기록 수정</button>
+    <button id="rasDelete" class="sheet-btn danger">기록 삭제</button>
+    <button id="rasCancel" class="sheet-btn">취소</button>
+  </div>
+</div>
 
+<!-- ✅ 기록 수정(초간단) 모달 -->
+<div id="recordEditModal" class="modal hidden">
+  <div class="modal-box" style="max-width:360px;">
+    <div class="modal-title">기록 수정</div>
+
+    <div id="editPreview" class="modal-desc" style="padding-top:6px;">
+      0kg × 0회 × 0set
+    </div>
+
+    <div style="display:flex; gap:8px; padding: 0 16px 14px;">
+      <input id="editW" type="number" inputmode="decimal" placeholder="kg"
+             style="flex:1; background:#111; color:#fff; border:1px solid #333; border-radius:10px; padding:12px;">
+      <input id="editR" type="number" inputmode="numeric" placeholder="회"
+             style="flex:1; background:#111; color:#fff; border:1px solid #333; border-radius:10px; padding:12px;">
+      <input id="editS" type="number" inputmode="numeric" placeholder="set"
+             style="flex:1; background:#111; color:#fff; border:1px solid #333; border-radius:10px; padding:12px;">
+    </div>
+
+    <div class="modal-actions">
+      <button id="editCancel" class="modal-btn">취소</button>
+      <button id="editConfirm" class="modal-btn danger">확인</button>
+    </div>
+  </div>
+</div>
 
    
 <!--  </body> 끝나기 전에 아래 팝업-->
@@ -2690,43 +2769,289 @@ document.getElementById("calNext").onclick = () => {
 
 calRender();
 
-   let recordPressTimer = null;
+/*********************************
+ * ✅ 기록 액션시트 + 통짜 수정(묶음) + 초간단 모달
+ *********************************/
+
+// ✅ DOM
+const recordActionSheet = document.getElementById("recordActionSheet");
+const rasBackdrop = document.getElementById("rasBackdrop");
+const rasEdit = document.getElementById("rasEdit");
+const rasDelete = document.getElementById("rasDelete");
+const rasCancel = document.getElementById("rasCancel");
+
+const recordEditModal = document.getElementById("recordEditModal");
+const editPreview = document.getElementById("editPreview");
+const editW = document.getElementById("editW");
+const editR = document.getElementById("editR");
+const editS = document.getElementById("editS");
+const editCancel = document.getElementById("editCancel");
+const editConfirm = document.getElementById("editConfirm");
+
+// ✅ 컨텍스트(현재 누른 기록 묶음)
+let rasCtx = null;   // { lift, ids[] }
+let editCtx = null;  // { lift, ids[], date, curSets }
+
+// ✅ active 폴더의 lift 얻기
+function getActiveLift(){
+  const activeBtn = document.querySelector('.folderBtn.active');
+  const target = activeBtn ? activeBtn.dataset.target : 'benchBox';
+  return (
+    target === 'benchBox' ? 'bench' :
+    target === 'squatBox' ? 'squat' :
+    target === 'deadBox'  ? 'dead'  :
+    'ohp'
+  );
+}
+
+// ✅ record 찾기(로컬/파이어스토어 모두 대응)
+function findRecordByAnyId(lift, id){
+  if(!lift || !id) return null;
+  const isLocal = String(id).startsWith("local_");
+  const pure = isLocal ? id.replace("local_","") : id;
+
+  const arr = records[lift] || [];
+  return arr.find(r =>
+    (!isLocal && r.firestoreId === pure) ||
+    (isLocal && String(r.localId) === pure)
+  ) || null;
+}
+
+// ✅ 액션시트 열기/닫기
+function openRecordSheet(ctx){
+  rasCtx = ctx;
+  recordActionSheet.classList.remove("hidden");
+}
+function closeRecordSheet(){
+  rasCtx = null;
+  recordActionSheet.classList.add("hidden");
+}
+
+// ✅ 수정 모달 열기/닫기
+function openEditModal(ctx){
+  editCtx = ctx;
+
+  // 현재값(첫 record 기준)
+  const first = findRecordByAnyId(ctx.lift, ctx.ids[0]);
+  const w = first ? first.weight : 0;
+  const r = first ? first.reps : 0;
+  const s = ctx.ids.length;
+
+  editW.value = formatKgSmart(w);
+  editR.value = r;
+  editS.value = s;
+
+  editPreview.textContent = `${formatKgSmart(w)}kg × ${parseInt(r,10)}회 × ${s}set`;
+
+  recordEditModal.classList.remove("hidden");
+  setTimeout(()=> editW.focus(), 0);
+}
+function closeEditModal(){
+  editCtx = null;
+  recordEditModal.classList.add("hidden");
+}
+
+// ✅ 입력 중 미리보기 즉시 갱신
+function refreshEditPreview(){
+  const w = parseFloat(editW.value);
+  const r = parseInt(editR.value,10);
+  const s = parseInt(editS.value,10);
+
+  const ww = Number.isFinite(w) ? formatKgSmart(w) : "0";
+  const rr = Number.isFinite(r) ? r : 0;
+  const ss = Number.isFinite(s) ? s : 0;
+
+  editPreview.textContent = `${ww}kg × ${rr}회 × ${ss}set`;
+}
+[editW, editR, editS].forEach(el => el.addEventListener("input", refreshEditPreview));
+
+// ✅ 묶음 삭제(한번에)
+async function deleteRecordsByIds(lift, ids){
+  if(!lift || !ids?.length) return;
+
+  // 1) 로컬 배열에서 한번에 제거
+  const idSet = new Set(ids.map(x => String(x)));
+  records[lift] = (records[lift] || []).filter(r => {
+    const fid = r.firestoreId ? String(r.firestoreId) : null;
+    const lid = r.localId ? ("local_" + String(r.localId)) : null;
+    return !idSet.has(fid) && !idSet.has(lid);
+  });
+
+  renderActiveBox();
+  saveRecordsToLocal();
+
+  // 2) Firestore 삭제(로그인 + firestoreId만)
+  const user = auth.currentUser;
+  if(user){
+    for(const id of ids){
+      const isLocal = String(id).startsWith("local_");
+      if(isLocal) continue;
+      try{
+        await db.collection("users").doc(user.uid).collection("records").doc(id).delete();
+      }catch(e){
+        console.error("Firestore delete error:", e);
+      }
+    }
+  }
+}
+
+// ✅ 묶음 수정(kg/reps 바꾸고, set 개수도 맞추기)
+async function applyPackedEdit(){
+  if(!editCtx) return;
+
+  const lift = editCtx.lift;
+  const user = auth.currentUser;
+
+  const wRaw = parseFloat(editW.value);
+  const rNew = parseInt(editR.value,10);
+  const sNew = parseInt(editS.value,10);
+
+  const wNew = round1(wRaw);
+
+  if(!Number.isFinite(wNew) || !Number.isFinite(rNew) || !Number.isFinite(sNew) || sNew <= 0){
+    alert("kg / 회 / set 을 올바르게 입력하세요.");
+    return;
+  }
+
+  // 현재 묶음 정보
+  const ids = [...editCtx.ids];
+  const curSets = ids.length;
+
+  // record의 date 확보(첫 record 기준)
+  const first = findRecordByAnyId(lift, ids[0]);
+  const date = first?.date || formatTodayYYMMDD();
+
+  // 1) 기존 ids에 대해서 weight/reps 업데이트
+  (records[lift] || []).forEach(r => {
+    const fid = r.firestoreId ? String(r.firestoreId) : null;
+    const lid = r.localId ? ("local_" + String(r.localId)) : null;
+    if(ids.includes(fid) || ids.includes(lid)){
+      r.weight = wNew;
+      r.reps = rNew;
+    }
+  });
+
+  // Firestore도 업데이트 (firestoreId만)
+  if(user){
+    for(const id of ids){
+      const isLocal = String(id).startsWith("local_");
+      if(isLocal) continue;
+      try{
+        await db.collection("users").doc(user.uid).collection("records").doc(id).update({
+          weight: wNew,
+          reps: rNew
+        });
+      }catch(e){
+        console.error("Firestore update err:", e);
+      }
+    }
+  }
+
+  // 2) set 개수 조정
+  if(sNew < curSets){
+    // 줄이기: 뒤에서부터 삭제
+    const toRemove = ids.slice(0, curSets - sNew); // ✅ "묶음 내 오래된 것" 쪽을 제거하려면 slice 바꾸면 됨
+    await deleteRecordsByIds(lift, toRemove);
+  }else if(sNew > curSets){
+    // 늘리기: 새 record 추가
+    const addCount = sNew - curSets;
+
+    for(let i=0; i<addCount; i++){
+      const item = {
+        firestoreId: null,
+        localId: Date.now() + Math.random(),
+        date,
+        weight: wNew,
+        reps: rNew
+      };
+      records[lift].unshift(item);
+
+      // 로그인 상태면 Firestore에도 추가
+      if(user){
+        try{
+          const docRef = await db.collection("users").doc(user.uid).collection("records").add({
+            lift,
+            date,
+            weight: wNew,
+            reps: rNew,
+            createdAt: firebase.firestore.FieldValue.serverTimestamp()
+          });
+          item.firestoreId = docRef.id;
+        }catch(e){
+          console.error("Firestore add err:", e);
+        }
+      }
+    }
+  }
+
+  // 3) 저장/렌더
+  renderActiveBox();
+  saveRecordsToLocal();
+
+  closeEditModal();
+}
+
+// ✅ 액션시트 버튼
+rasBackdrop.addEventListener("click", closeRecordSheet);
+rasCancel.addEventListener("click", closeRecordSheet);
+
+rasEdit.addEventListener("click", () => {
+  if(!rasCtx) return;
+  closeRecordSheet();
+  openEditModal(rasCtx);
+});
+
+rasDelete.addEventListener("click", async () => {
+  if(!rasCtx) return;
+  closeRecordSheet();
+
+  if(confirm("이 기록(묶음)을 삭제할까요?")){
+    await deleteRecordsByIds(rasCtx.lift, rasCtx.ids);
+  }
+});
+
+// ✅ 수정 모달 버튼/바깥 클릭 닫기
+editCancel.addEventListener("click", closeEditModal);
+editConfirm.addEventListener("click", applyPackedEdit);
+recordEditModal.addEventListener("click", (e) => {
+  if(e.target === recordEditModal) closeEditModal();
+});
+
+// ✅ “기록 꾹누르기” → 액션시트
+let recordPressTimer = null;
+
+function startRecordLongPress(e){
+  const line = e.target.closest(".record-line");
+  if(!line) return;
+
+  // 터치/마우스 스크롤 중 텍스트 선택 방지
+  e.preventDefault?.();
+
+  const lift = getActiveLift();
+  const ids = (line.dataset.ids || "").split(",").map(s=>s.trim()).filter(Boolean);
+  if(!ids.length) return;
+
+  recordPressTimer = setTimeout(() => {
+    openRecordSheet({ lift, ids });
+  }, 550);
+}
+
+function clearRecordLongPress(){
+  if(recordPressTimer){
+    clearTimeout(recordPressTimer);
+    recordPressTimer = null;
+  }
+}
 
 // PC
-document.addEventListener("mousedown", e => {
-  const line = e.target.closest(".record-line");
-  if (!line) return;
-
-  recordPressTimer = setTimeout(() => {
-    if (confirm("이 기록을 삭제할까요?")) {
-      deleteRecord(line.dataset.id);
-    }
-  }, 600);
-});
-
-document.addEventListener("mouseup", () => {
-  clearTimeout(recordPressTimer);
-});
+document.addEventListener("mousedown", startRecordLongPress, { passive:false });
+document.addEventListener("mouseup", clearRecordLongPress);
+document.addEventListener("mousemove", clearRecordLongPress);
 
 // 모바일
-document.addEventListener("touchstart", e => {
-  const line = e.target.closest(".record-line");
-  if (!line) return;
-
-  recordPressTimer = setTimeout(() => {
-    if (confirm("이 기록을 삭제할까요?")) {
-      deleteRecord(line.dataset.id);
-    }
-  }, 600);
-});
-
-document.addEventListener("touchend", () => {
-  clearTimeout(recordPressTimer);
-});
-
-document.addEventListener("touchmove", () => {
-  clearTimeout(recordPressTimer);
-});
+document.addEventListener("touchstart", startRecordLongPress, { passive:false });
+document.addEventListener("touchend", clearRecordLongPress);
+document.addEventListener("touchmove", clearRecordLongPress);
 
 
    
