--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@ cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 400000;
+  z-index: 200000;
 }
 
 .modal.hidden{ display:none; }
@@ -1662,37 +1662,27 @@ input[type="number"] {
   </div>
 </div>
 
-<!-- ✅ 기록 수정(초미니) 모달 -->
+<!-- ✅ “통짜 수정” 모달 -->
 <div id="recordEditModal" class="modal hidden">
   <div class="modal-box">
     <div class="modal-title">기록 수정</div>
 
-    <!-- 한 줄 입력 -->
-    <div style="padding: 6px 16px 18px;">
-      <div style="
-        display:flex;
-        align-items:center;
-        justify-content:center;
-        gap:8px;
-        font-weight:900;
-        color:#FFD700;
-        font-size:18px;
-      ">
-        <input id="editW" type="number" inputmode="decimal"
-          style="width:88px; height:40px; border-radius:10px; border:1px solid #333; background:#111; color:#eee; text-align:center;"
-        />
-        <span style="color:#999; font-weight:800;">kg ×</span>
+    <!-- 현재값 표시 (클릭하면 자동 세팅) -->
+    <div id="recordEditCurrent"
+         style="padding:0 16px 10px; text-align:center; font-weight:800; color:#FFD700; cursor:pointer;">
+    </div>
 
-        <input id="editR" type="number" inputmode="numeric"
-          style="width:72px; height:40px; border-radius:10px; border:1px solid #333; background:#111; color:#eee; text-align:center;"
-        />
-        <span style="color:#999; font-weight:800;">회 ×</span>
+    <!-- 선택 탭 -->
+    <div style="display:flex; gap:8px; padding:0 16px 12px;">
+      <button class="editPickBtn" data-pick="weight" style="flex:1;" type="button">무게</button>
+      <button class="editPickBtn" data-pick="reps" style="flex:1;" type="button">횟수</button>
+      <button class="editPickBtn" data-pick="sets" style="flex:1;" type="button">세트</button>
+    </div>
 
-        <input id="editS" type="number" inputmode="numeric"
-          style="width:72px; height:40px; border-radius:10px; border:1px solid #333; background:#111; color:#eee; text-align:center;"
-        />
-        <span style="color:#999; font-weight:800;">set</span>
-      </div>
+    <!-- 입력 -->
+    <div style="padding:0 16px 14px;">
+      <div id="recordEditLabel" style="font-size:12px; color:#888; margin-bottom:6px;">무게(kg) 수정</div>
+      <input id="recordEditInput" type="number" style="width:100%; height:42px; border-radius:10px; border:1px solid #333; background:#111; color:#eee; padding:0 12px;">
     </div>
 
     <div class="modal-actions" style="grid-template-columns: 1fr 1fr;">
@@ -2841,41 +2831,65 @@ rasCancel.addEventListener("click", closeRecordSheet);
 
 // ✅ 수정
 /*********************************
- * ✅ 기록 수정 (초미니: w/r/s 3칸)
+ * ✅ 통짜 수정 모달(무게/횟수/세트)
  *********************************/
 const recordEditModal   = document.getElementById("recordEditModal");
+const recordEditCurrent = document.getElementById("recordEditCurrent");
+const recordEditLabel   = document.getElementById("recordEditLabel");
+const recordEditInput   = document.getElementById("recordEditInput");
 const recordEditCancel  = document.getElementById("recordEditCancel");
 const recordEditConfirm = document.getElementById("recordEditConfirm");
+const pickBtns          = document.querySelectorAll(".editPickBtn");
 
-const editW = document.getElementById("editW");
-const editR = document.getElementById("editR");
-const editS = document.getElementById("editS");
+let editPick = "weight"; // weight | reps | sets
+let editCtx = null;      // { ids[], weight, reps, sets, date }
 
-let editCtx = null; // { ids[], weight, reps, sets, date }
+function setPick(p){
+  editPick = p;
+  pickBtns.forEach(b => b.classList.toggle("active", b.dataset.pick === p));
+
+  if(editPick === "weight") recordEditLabel.textContent = "무게(kg) 수정";
+  if(editPick === "reps")   recordEditLabel.textContent = "횟수(회) 수정";
+  if(editPick === "sets")   recordEditLabel.textContent = "세트(set) 수정";
+
+  // 기본값 채우기
+  if(editCtx){
+    if(editPick === "weight") recordEditInput.value = String(editCtx.weight ?? "");
+    if(editPick === "reps")   recordEditInput.value = String(editCtx.reps ?? "");
+    if(editPick === "sets")   recordEditInput.value = String(editCtx.sets ?? "");
+  }
+  // 포커스
+  setTimeout(() => recordEditInput.focus(), 0);
+}
+
+function renderEditCurrentLine(){
+  if(!editCtx) return;
+  // 숫자 클릭 가능하게 span으로 감싸기
+  recordEditCurrent.innerHTML = `
+    <span data-pick="weight">${formatKgSmart(editCtx.weight)}</span>kg ×
+    <span data-pick="reps">${parseInt(editCtx.reps,10)}</span>회 ×
+    <span data-pick="sets">${parseInt(editCtx.sets,10)}</span>set
+  `;
+}
 
 function openRecordEditModalFromLine(lineEl){
   const ids = (lineEl.dataset.ids || "").split(",").filter(Boolean);
-
-  const w = round1(parseFloat(lineEl.dataset.weight));
-  const r = parseInt(lineEl.dataset.reps, 10);
-  const s = parseInt(lineEl.dataset.sets, 10);
-  const d = lineEl.dataset.date || "";
+  const w   = parseFloat(lineEl.dataset.weight);
+  const r   = parseInt(lineEl.dataset.reps, 10);
+  const s   = parseInt(lineEl.dataset.sets, 10);
+  const d   = lineEl.dataset.date || "";
 
   editCtx = {
     ids: ids.length ? ids : [lineEl.dataset.id],
-    weight: w,
+    weight: round1(w),
     reps: r,
     sets: s,
     date: d
   };
 
-  // ✅ 입력칸 채우기
-  editW.value = String(w ?? "");
-  editR.value = String(r ?? "");
-  editS.value = String(s ?? "");
-
+  renderEditCurrentLine();
+  setPick("weight");              // 기본은 무게 수정
   recordEditModal.classList.remove("hidden");
-  setTimeout(() => editW.focus(), 0);
 }
 
 function closeRecordEditModal(){
@@ -2883,39 +2897,26 @@ function closeRecordEditModal(){
   editCtx = null;
 }
 
+// 숫자 클릭하면 해당 항목으로 바로 전환
+recordEditCurrent.addEventListener("click", (e) => {
+  const pick = e.target?.dataset?.pick;
+  if(pick) setPick(pick);
+});
+
+// 탭 버튼(무게/횟수/세트)
+pickBtns.forEach(btn => {
+  btn.addEventListener("click", () => setPick(btn.dataset.pick));
+});
+
 // 취소/바깥 닫기
 recordEditCancel.addEventListener("click", closeRecordEditModal);
 recordEditModal.addEventListener("click", (e) => {
   if(e.target === recordEditModal) closeRecordEditModal();
 });
 
-// Enter 이동: 무게→횟수→세트→확인
-editW.addEventListener("keydown", (e)=>{ if(e.key==="Enter"){ editR.focus(); }});
-editR.addEventListener("keydown", (e)=>{ if(e.key==="Enter"){ editS.focus(); }});
-editS.addEventListener("keydown", (e)=>{ if(e.key==="Enter"){ recordEditConfirm.click(); }});
-
-// ✅ 확인: 통짜 적용(무게/횟수/세트 한 번에)
-recordEditConfirm.addEventListener("click", async () => {
-  if(!editCtx) return;
-
-  const w = round1(parseFloat(editW.value));
-  const r = parseInt(editR.value, 10);
-  const s = parseInt(editS.value, 10);
-
-  if(!Number.isFinite(w) || w <= 0) return alert("무게를 제대로 입력해줘");
-  if(!Number.isFinite(r) || r <= 0) return alert("횟수를 제대로 입력해줘");
-  if(!Number.isFinite(s) || s <= 0) return alert("세트를 제대로 입력해줘");
-
-  // 1) 무게/횟수: 묶음 전체 업데이트
-  await updatePackedWeightReps(editCtx.ids, w, r);
-
-  // 2) 세트 수: 개수 맞추기(추가/삭제) — 추가되는 세트도 w/r로
-  const first = findFirstRecordByAnyId(editCtx.ids);
-  const date = (first?.date) || editCtx.date || formatTodayYYMMDD();
-  await syncPackedSetsCount(editCtx.ids, s, w, r, date);
-
-  closeRecordEditModal();
-  closeRecordSheet();
+// 엔터로 확인
+recordEditInput.addEventListener("keydown", (e) => {
+  if(e.key === "Enter") recordEditConfirm.click();
 });
 
 /*********************************
@@ -3037,15 +3038,52 @@ async function syncPackedSetsCount(ids, targetSets, weight, reps, date){
   }
 }
 
+recordEditConfirm.addEventListener("click", async () => {
+  if(!editCtx) return;
 
+  const vRaw = recordEditInput.value;
+  if(vRaw === "" || vRaw === null) return;
+
+  // 입력값 파싱
+  let v;
+  if(editPick === "weight"){
+    v = round1(parseFloat(vRaw));
+    if(!Number.isFinite(v) || v <= 0) return alert("무게를 제대로 입력해줘");
+    editCtx.weight = v;
+    await updatePackedWeightReps(editCtx.ids, editCtx.weight, editCtx.reps);
+  }
+
+  if(editPick === "reps"){
+    v = parseInt(vRaw, 10);
+    if(!Number.isFinite(v) || v <= 0) return alert("횟수를 제대로 입력해줘");
+    editCtx.reps = v;
+    await updatePackedWeightReps(editCtx.ids, editCtx.weight, editCtx.reps);
+  }
+
+  if(editPick === "sets"){
+    v = parseInt(vRaw, 10);
+    if(!Number.isFinite(v) || v <= 0) return alert("세트를 제대로 입력해줘");
+
+    // ✅ 세트 수 자체를 맞춤(추가/삭제)
+    const first = findFirstRecordByAnyId(editCtx.ids);
+    const date = (first?.date) || editCtx.date || formatTodayYYMMDD();
+    await syncPackedSetsCount(editCtx.ids, v, editCtx.weight, editCtx.reps, date);
+
+    // 세트 재렌더 후 닫기
+  }
+
+  // 상단 표시 갱신
+  editCtx.sets = (editPick === "sets") ? parseInt(recordEditInput.value,10) : editCtx.sets;
+  renderEditCurrentLine();
+
+  closeRecordEditModal();
+  closeRecordSheet(); // 액션시트도 닫기
+});
 
 // ✅ 액션시트 "수정" → 모달 열기
 rasEdit.addEventListener("click", () => {
   if(!pressedRecordEl) return;
-
-  const el = pressedRecordEl;  // ✅ 닫으면 null로 되니까 백업
-  closeRecordSheet();          // ✅ 먼저 시트 닫기
-  openRecordEditModalFromLine(el); // ✅ 그 다음 모달 열기
+  openRecordEditModalFromLine(pressedRecordEl);
 });
 
 // ✅ 삭제
